Change project from spring to micronaut